color contrast fix

--- a/styles/place.css
+++ b/styles/place.css
@@ -1,6 +1,6 @@
 :root {
-    --background-color: rgb(204, 29, 29);
-    --foreground-color: whitesmoke;
+    --background-color: rgb(165, 23, 23);
+    --foreground-color: white;
     --margin: 1rem 0 2rem;
 }
 
